--- a/README.textile
+++ b/README.textile
@@ -1,3 +1,9 @@
 h1. GokyAdmin
 
+h2. ?!?
+
 Wrapper for the minecraft server that will popup notifications at every login on the server
+
+h2. Instructions
+
+Just drop it on the folder where you hold the jar of your server
